# rompt-py

./: .gitignore  README.md  setup.cfg
src/rompt/: __init__.py  __main__.py  bindings.py  common.py  generate.py  main.py  pull.py  track.py
test/: test_main.py
