[metadata]
name = rompt
version = 1.0.0
author = Rompt.ai
author_email = admin@rompt.ai
license = MIT
description = Python library to interact with the Rompt API and CLI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rompt-ai/rompt-py

[options]
install_requires =
	requests>=2.27.1
python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	rompt = rompt.main:main
